fix project container gap

--- a/src/components/style/_projects.scss
+++ b/src/components/style/_projects.scss
@@ -63,7 +63,7 @@
     display: grid;
     grid-template-columns: repeat(2,1fr);
     margin-top: 3rem;
-    gap: 4rem;
+    gap: 2rem;
     color: var(--textParagraphHighlight);
     @media screen and (max-width: 853px){
         grid-template-columns: repeat(1,1fr);
