--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -335,7 +335,7 @@ h1, h2, h3, h4, h5 {
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
   margin-top: 3rem;
-  gap: 4rem;
+  gap: 2rem;
   color: var(--textParagraphHighlight);
 }
 
